Bug 840721 - Add a PostDelayedTask method to the GeckoContentController interface. r=cjones